[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-broadcast"
version = "0.0.0"

description = "Broadcast package for Ballsdex 3.0"
license = "Apache-2.0"
authors = [
    { name = "Ray Hsueh", email = "ray.hsueh.founder@gmail.com" },
]
readme = "README.md"

dependencies = [

]
